<resources>
    <string name="app_name">ClothesMarket</string>
    <string name="my_name">Juan Pablo Cortes Moncada</string>
    <string name="sign_up">Regístrate</string>
    <string name="intro">Inicie una nueva aventura con ClothesMarket y descubre una nueva forma de ver el mundo</string>
    <string name="get_start">Comienza</string>
    <string name="welcome">La aventura está por inciar, por favor inicia sesión</string>
    <string name="log_in">Ingresar</string>
    <string name="recovery">Recupera Tu Contraseña</string>
    <string name="recovery_button">Recuperar contraseña</string>
    <string name="accountoff">No tienes cuenta?</string>
    <string name="google">Ingresa con Google</string>
    <string name="regist_description">Completa el formulario para registrar tu cuenta</string>
    <string name="send">Enviar</string>
    <string name="hintName">Introduce tu nombre</string>
    <string name="hintLastName">Introduce tu apellido</string>
    <string name="hintEmail">Introduce tu correo</string>
    <string name="hintPhone">Introduce tu telefono</string>
    <string name="hintPass">Crea una contraseña</string>
    <string name="hintPutPass">Introduce tu contraseña</string>
    <string name="hintPassRepeat">Repite tu contraseña</string>
    <string name="terms">Acepto los términos y condiciones</string>
    <string name="indicationRecovery">Ingrese el correo electrónico registrado en su cuenta. Al oprimir recuperar contraseña, a este correo se le enviarán las indicaciones para recuperar su contraseña</string>
    <string name="userInfo">Datos de usuario:</string>
    <string name="edit">Editar</string>
    <string name="logo_de_la_aplicaci_n">Logo de la aplicación</string>
    <string name="tienda_virtual">Tienda Virtual</string>
    <string name="bienvenida">Bienvenida</string>
    <string name="bienvenida2">Bienvenido a ClothesMarket</string>
    <string name="inicio">Inicio</string>
    <string name="categorias">Categorias</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="productos">Productos</string>
    <string name="open_drawer">menu abierto</string>
    <string name="close_drawer">menu cerrado</string>
    <string name="add_carrito">Añadir al Carrito</string>
    <string name="description_shop">"Explora nuestra colección de ropa diseñada para cada estación del año. Desde atuendos cálidos para el invierno hasta estilos frescos para el verano, encuentra moda que se adapta a ti. Compra fácil, rápido y seguro."
</string>
    <string name="cantidad">Cantidad:</string>
    <string name="menos">-</string>
    <string name="num_one">1</string>
    <string name="mas">+</string>
    <string name="rol">Rol:</string>
    <string name="admin">Admin</string>
    <string name="usuario_general">Usuario General</string>
    <string name="registro">Registro</string>
</resources>