<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/graydark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_foto_perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_user" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            tools:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintLastName"
            tools:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            tools:textColorHint="@color/gray" />

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hintPhone"
            android:inputType="phone"
            tools:textColorHint="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_guardar"
            android:layout_width="241dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="Guardar cambios"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            app:strokeWidth="3dp" />

    </LinearLayout>

</ScrollView>
