<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    android:background="@color/black"
    >

    <!--Button con el mensaje de bienvenida a la App-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_logo_registro"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/mainlogo" />

        <TextView
            android:id="@+id/tv_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/indicationRecovery"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/EditTextRounded"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            tools:textColorHint="@color/gray" />

        <Button
            android:id="@+id/bt_recovery_pass"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="serif"
            android:padding="1dp"
            android:text="@string/recovery_button"
            android:textColor="@color/black"
            android:textSize="20dp"
            app:cornerRadius="30dp"
            app:strokeWidth="3dp" />
    </LinearLayout>


</ScrollView>