<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/graydark">

        <ImageView
            android:id="@+id/imagen_producto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/nombre_producto"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/descripcion_producto"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/precio_producto"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cantidad_producto"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad"
                    android:textColor="@color/white"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btn_decrementar"
                    style="@style/ButtonRounded"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:text="@string/menos"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_cantidad_seleccionada"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/num_one"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btn_incrementar"
                    style="@style/ButtonRounded"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="0dp"
                    android:text="@string/mas"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/boton_agregar_carrito"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@color/bluelightsoft"
                android:padding="0dp"
                android:text="@string/add_carrito" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>